# LibSharedMemoryObject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_debug.sh  build_release.sh  clean.sh  install.sh  valgrind.sh
examples/: hello_world_example.c  linux_hello_world_library.c  linux_shared_example.c  linux_simple_example.c  windows_hello_world_library.c  windows_shared_example.c  windows_simple_example.c
lib/: ei.lib  ei_static.lib
src/smo/: alloc.h  bool.h  smo.h
src/smo/api/: smo_handle.c  smo_handle.h
src/smo/impl/linux/: smo_linux.c
src/smo/impl/windows/: MemoryModule.c  MemoryModule.h  smo_windows.c
src/smo/linux/: smo_linux.c
src/smo/utils/: alloc.h  bool.h
src/smo/windows/: smo_windows.c
